LOGCXX-150: logstream's operator<< declared in wrong namespace